# UPXO

./: .gitattributes  .gitignore  CLA.md  COMMERCIAL.md  COPYRIGHT.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
src/upxo/.github/: copilot-instructions.md  mcgs2_temporal_slice_reference.md
src/upxo/_sup/: console_formats.py  dataTypeHandlers.py  data_ops.py  data_templates.py  decorators.py  excel_inout.py  export_data.py  gops.py  progress_bar.py  validation_values.py
src/upxo/algorithms/: alg200.py  alg200gen.py  alg201.py  alg202.py
src/upxo/analysis/: analysis2d.py
src/upxo/charops/: _mchar2d.py  _mchar3d.py  mchar.py
src/upxo/connops/: neighbour_ops.py
src/upxo/flags_and_controls/: flags.py
src/upxo/gbops/: grainBoundOps3d.py  mcgb2dops.py
src/upxo/geoEntities/: bases.py  edge2d.py  featmake.py  muledge2d.py  mulpoint2d.py  mulpoint2d_old.py  mulpoint3d.py  mulsline2d.py  plane.py  point2d.py  point3d.py  point_processes.py  polygon3d.py  pops.py  ring2d.py  sline2d.py
src/upxo/ggrowth/: make3d.py  mcgs.py  mcgs_bu.py
src/upxo/grids/: gridder.py
src/upxo/gsContainters/: __init__.py  mcgs2Cont.py
src/upxo/gsdataops/: gid_ops.py  grid_ops.py
src/upxo/imageOps/: voids.py
src/upxo/jpops/: jpops.py
src/upxo/mechanics/: twins_calculations.py
src/upxo/meshing/: conformal_mesher2d.py  elemOps.py  gsmesh2d.py  mesher2d_ChrisHardie.py  mesher_2d_BU1.24012026.py  mesher_2d_BU2.25012026.py  nonConformalMesher - Copy.py  nonConformalMesher.py  pxtalmesh_01.py  writer_ABQ.py
src/upxo/misc/: make_belief.py
src/upxo/propOps/: mpropOps.py
src/upxo/pxtal/: FMSteels.py  geometrification.py  gs_twin_3d.py  images.py  images1.py  img_essentials_01.py  mcgs2_temporal_slice.py  mcgs3_temporal_slice - bu18102025.py  mcgs3_temporal_slice.py  polyxtal.py  single_phased.py  untitled1.py  vortess2d.py  vortess3d.py
src/upxo/pxtalops/: detect_grains_from_mcstates.py  grain_boundary_zones.py  gssmooth2d.py  manipulator_mergers.py  modeModifierMcgs2d.py  morphochar.py  temporalPatcher.py  vox2geom.py
src/upxo/repgen/: repgen2dmcgs.py  repgen3dmcgs.py
src/upxo/repqual/: grain_network_repr_assesser.py  mcgs2d_representativeness_assesser.py
src/upxo/statops/: StatOper.py  sampling.py  stattests.py
src/upxo/surrModelOps/: SModelJobs.py
wikidocs/pages/: keyFuncs1.md
(+103 files in other folders)
