[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "upxo"
version = "1.0"
description = "An open-source Python package for generation, analysis, assessment, visualisation, meshing, and export of representative polycrystalline grain structures."
readme = "README.md"
requires-python = "==3.13"
license = "GPL-3.0-only"
authors = [
    { name = "Dr. Sunil Anandatheertha", email = "vaasu.anandatheertha@ukaea.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13"
]
dependencies = []

[project.urls]
Repository = "https://github.com/Design-By-Fundamentals-UKAEA/UPXO"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]